# todo-app

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  server.py  todo.db
api/models/: __init__.py  todo.py
api/routes/: __init__.py  todo.py
api/schemas/: __init__.py  todo.py
api/services/: __init__.py  ai_service.py  todo.py
app/: main.py
